Fixed Body background color

--- a/Huawei/huaweiScroll.html
+++ b/Huawei/huaweiScroll.html
@@ -58,7 +58,7 @@
 
 	 </style>
 </head>
-<body class="HuaweiScroll" style="margin:0px;">
+<body class="HuaweiScroll" style="margin:0px; background-color:white;">
 
 	<div class="bzm_wrapper carousel-wrapper size_320x480">
 		<div class="context">
