Added Huawei link in CTA button

--- a/Huawei/huaweiScroll.html
+++ b/Huawei/huaweiScroll.html
@@ -136,7 +136,7 @@
                     </a>
                 </span>
             </div>
-            <a href="" style="line-height:30px;" target="_blank">
+            <a href="http://www.huawei.com/mx/" style="line-height:30px;" target="_blank">
                 <div class="logo">
                     <span style="font-size:11.5px; font-weight:800; line-height:28px;">CTA</span>
                 </div>
