Changed Huawei Pic location Changed CTA name to mas info

--- a/Huawei/huaweiScroll.html
+++ b/Huawei/huaweiScroll.html
@@ -97,14 +97,15 @@
 				<span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000;">
 				    </br>
 				    <i><b>París, XX de abril de 2018.–</b> La autoridad global en pruebas y calificación de cámaras fotográficas y de video, DxOMark, ha otorgado a los nuevos equipos de la serie HUAWEI P las más altas calificaciones jamás recibidas en la historia de la firma. Ambos presentados en París el pasado 27 de marzo, el HUAWEI P20 y el HUAWEI P20 Pro, cuentan con el nuevo sistema de cámara co desarrollado con Leica, que es capaz de producir imágenes con una calidad nunca antes alcanzada por un smartphone.
-				    </br></br>
-				    El HUAWEI P20 Pro, que es el primer dispositivo de su tipo en integrar un sistema de cámara triple, obtuvo una calificación general de 109 puntos, que engloba 114 puntos en el apartado fotográfico y 98 en el de video, estableciendo un nuevo récord para cámaras de smartphones, colocándose además 10 puntos por encima de la mejor calificación recibida por cualquier dispositivo de la competencia. Por su parte, el HUAWEI P20 alcanzó una calificación global de 102 puntos, la segunda más alta de la historia de DxOMark, con 107 puntos en fotografía y 94 en video.
-                    </br>
-                    <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-15px; padding-top:30px; padding-bottom:20px;">
+				    </br>
+				    <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-15px; padding-top:30px; padding-bottom:20px;">
 						<a href="http://www.huawei.com/mx/" style="display:block; margin-left:-10px;" target="_blank">
 						    <div style="background-image:url(https://i.imgur.com/QOuJv55.jpg); background-size:cover; width:315px; height:150px;"></div>
 						</a>
 					</span>
+				    El HUAWEI P20 Pro, que es el primer dispositivo de su tipo en integrar un sistema de cámara triple, obtuvo una calificación general de 109 puntos, que engloba 114 puntos en el apartado fotográfico y 98 en el de video, estableciendo un nuevo récord para cámaras de smartphones, colocándose además 10 puntos por encima de la mejor calificación recibida por cualquier dispositivo de la competencia. Por su parte, el HUAWEI P20 alcanzó una calificación global de 102 puntos, la segunda más alta de la historia de DxOMark, con 107 puntos en fotografía y 94 en video.
+                    </br></br>
+                    
                     DxOMark tiene una larga trayectoria realizando pruebas de equipos fotográficos, tanto de cámaras profesionales dedicadas, como de smartphones de gama alta. Esta firma se ha convertido en un referente de la industria debido a sus exhaustivas y detalladas pruebas de laboratorio, incluyendo apartados como exposición, contraste, color, detalle y reducción de ruido, entre otros. El puntaje que otorga DxOMark, tanto para fotografía como video, es el resultado de numerosas pruebas sobre casi 1,500 imágenes y docenas de clips de video.
                     </br>
                     <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-15px; padding-top:30px; padding-bottom:20px;">
@@ -138,7 +139,7 @@
             </div>
             <a href="http://www.huawei.com/mx/" style="line-height:30px;" target="_blank">
                 <div class="logo">
-                    <span style="font-size:11.5px; font-weight:800; line-height:28px;">CTA</span>
+                    <span style="font-size:11.5px; font-weight:800; line-height:28px;">más info</span>
                 </div>
             </a>
             <br>
