--- a/Inkabet/slider.html
+++ b/Inkabet/slider.html
@@ -22,7 +22,7 @@
 			font-family:Source Sans Pro;		
 		}
           .InkabetSlide .bzm_text {
-              margin-top: 2em;
+              margin-top: 10px;
               margin-left: 10px;
               text-align: center;
           }  
