Changed Inkabet Cube 3d URL

--- a/Inkabet/Cube3d.html
+++ b/Inkabet/Cube3d.html
@@ -851,7 +851,7 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 /* Name: On Click; */
 document.getElementById('i4').addEventListener('click', function(e){
     /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.caliente.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'hhttps://www.inkabet.pe/es-ES/sportsbook'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i58.image.js:image/base/js*/
@@ -862,7 +862,7 @@ document.getElementById('i4').addEventListener('click', function(e){
 /* Name: On Click; */
 document.getElementById('i5').addEventListener('click', function(e){
     /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.caliente.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.inkabet.pe/es-ES/sportsbook'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i60.image.js:image/base/js*/
@@ -873,7 +873,7 @@ document.getElementById('i5').addEventListener('click', function(e){
 /* Name: On Click; */
 document.getElementById('i6').addEventListener('click', function(e){
     /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.caliente.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.inkabet.pe/es-ES/sportsbook'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*/
