Changed Inkabet Slider URL

--- a/Inkabet/slider.html
+++ b/Inkabet/slider.html
@@ -106,7 +106,7 @@
 </head>
 <body class="InkabetSlide" style="margin:0px;">
 	 <div class="te-container">
-		<a href="https://www.bancomer.com/patrimonial/b-com.jsp" target="_blank">
+		<a href="https://www.inkabet.pe/es-ES/sportsbook" target="_blank">
 			<div id="te-wrapper" class="te-wrapper">
 				<div class="te-images">
 					<img src="https://i.imgur.com/vUPdHOY.jpg" alt="" />
