Fixed some details in cube & video format

--- a/Dji/Cube3d.html
+++ b/Dji/Cube3d.html
@@ -617,7 +617,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 278px; height: 58px;
         -ms-transform: translate(-50%, -50%) translate(6px, 64px) rotate(0deg);
@@ -646,7 +646,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(205px, 214px) rotate(0deg);
 }
 /*#/#*//*#i4.i64.image.css:image/base/css*/
-#i64 { opacity: 1; height: 16px; width: 27px!important;}
+#i64 { opacity: 1; height: 23px; width: 40px!important;}
 /*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
 #i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 75px; height: 19px;
         -ms-transform: translate(0, 0) translate(17px, 224px) rotate(0deg);
@@ -667,7 +667,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 63px;
         -ms-transform: translate(-50%, -50%) translate(6px, 71px) rotate(0deg);
@@ -701,7 +701,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i5.i66.image.css:image/base/css*/
-#i66 { opacity: 1; height: 16px; width: 27px!important;}
+#i66 { opacity: 1; height: 23x; width: 41px!important;}
 /*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
 #i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 75px; height: 19px;
         -ms-transform: translate(0, 0) translate(17px, 224px) rotate(0deg);
@@ -733,7 +733,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: ##1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 55px;
         -ms-transform: translate(-50%, -50%) translate(6px, 67px) rotate(0deg);
@@ -751,7 +751,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i68.image.css:image/base/css*/
-#i68 { opacity: 1; height: 16px; width: 27px!important;}
+#i68 { opacity: 1; height: 23px; width: 40px!important;}
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.1*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 75px; height: 19px;
         -ms-transform: translate(0, 0) translate(17px, 224px) rotate(0deg);
@@ -818,7 +818,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¡¡Saca lo máximo de tus viajes!!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/D4TRiS1.png"/>
+<img id="i60" src="https://i.imgur.com/vqQHjNB.png"/>
 <!--#/#--><!--#i6.i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/6DaOAMB.png"/>
 <!--#/#-->
