Added Acent in seguira word

--- a/Dji/Cube3d.html
+++ b/Dji/Cube3d.html
@@ -804,7 +804,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Te seguira donde vayas</div>
+<div id="i24">Te seguirá donde vayas</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/D4TRiS1.png"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
