--- a/DHL/DHLCube.html
+++ b/DHL/DHLCube.html
@@ -617,7 +617,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 2px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 2px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 278px; height: 58px;
         -ms-transform: translate(-50%, -50%) translate(11px, 75px) rotate(0deg);
@@ -635,7 +635,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(-242px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i64.image.css:image/base/css*/
-#i64 { opacity: 1; height: 20px; width: 89px!important;}
+#i64 { opacity: 1; height: 20px; width: 89px!important; text-align: right;}
 /*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
 #i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 19px;
         -ms-transform: translate(0, 0) translate(22px, 219px) rotate(0deg);
@@ -668,7 +668,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 2px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 2px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 63px;
         -ms-transform: translate(-50%, -50%) translate(16px, 83px) rotate(0deg);
@@ -702,7 +702,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i5.i66.image.css:image/base/css*/
-#i66 { opacity: 1; height: 20x; width: 89px!important;}
+#i66 { opacity: 1; height: 20x; width: 89px!important; text-align: right;}
 /*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
 #i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 20px;
         -ms-transform: translate(0, 0) translate(22px, 219px) rotate(0deg);
@@ -735,7 +735,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 2px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 22px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 2px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 55px;
         -ms-transform: translate(-50%, -50%) translate(15px, 76px) rotate(0deg);
@@ -753,7 +753,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(-41px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i68.image.css:image/base/css*/
-#i68 { opacity: 1; height: 20px; width: 89px!important;}
+#i68 { opacity: 1; height: 20px; width: 89px!important; text-align: right;}
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.1*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 19px;
         -ms-transform: translate(0, 0) translate(22px, 219px) rotate(0deg);
