Changed images URl in cube format

--- a/Housell/Cube3d.html
+++ b/Housell/Cube3d.html
@@ -797,7 +797,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Vende tu casa de particular a particular, sin intermediarios y con un precio fijo</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/hBmos2J.jpg"/>
+<img id="i130" src="https://i.imgur.com/TX9D2Yv.png"/>
 <!--#/#--><!--#i4.i64.image.html:image/html-->
 <img id="i64" src="https://i.imgur.com/Qw2jb2H.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -811,7 +811,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Una nueva forma de vender tu casa. ¡Te ahorraras las comisiones!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/Tlh42Sc.jpg"/>
+<img id="i58" src="https://i.imgur.com/2oNFBwz.png"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
 <img id="i66" src="https://i.imgur.com/Qw2jb2H.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -825,7 +825,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">Descubre una nueva forma de vender tu casa de particular a particular.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/gvS4Etp.jpg"/>
+<img id="i60" src="https://i.imgur.com/UJKr73F.png"/>
 <!--#/#--><!--#i6.i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/Qw2jb2H.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
